--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -7,8 +7,7 @@
     "baseUrl": ".",
     "lib": ["ESNext", "DOM"],
     "paths": {
-      "@/*": ["./src/*"],
-      "@wails/*": ["./src/bridge/wailsjs/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
